# jjfs

./: .gitignore  CHANGELOG.md  README.md  shard.yml
docs/: fuse-approach.md  user-guide.md
docs/plans/: 2025-10-19-jjfs-design.md  2025-10-19-jjfs-implementation.md
jjfs-nfs/: .gitignore  Cargo.toml
jjfs-nfs/src/: main.rs  passthrough.rs
scripts/: release.sh  test-local.sh
spec/: cli_spec.cr  config_spec.cr  daemon_spec.cr  integration_spec.cr  spec_helper.cr  sync_coordinator_spec.cr  watcher_spec.cr
spec/commands/: init_spec.cr
src/: cli.cr  config.cr  daemon.cr  jjfs.cr  jjfsd.cr  mount_manager.cr  nfs_server.cr  remote_syncer.cr  rpc_client.cr  rpc_server.cr  storage.cr  sync_coordinator.cr  watcher.cr
src/commands/: close.cr  import.cr  init.cr  install.cr  list.cr  new.cr  open.cr  remote.cr  repos.cr  start.cr  status.cr  stop.cr
templates/: com.jjfs.daemon.plist  jjfs.service
