[package]
name = "jjfs-nfs"
version = "0.1.0"
edition = "2021"

[dependencies]
nfsserve = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[[bin]]
name = "jjfs-nfs"
path = "src/main.rs"
